--- a/Giới thiệu.html
+++ b/Giới thiệu.html
@@ -2,107 +2,106 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Du lịch Cần Thơ</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hello-Vietnam</title>
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-    header { background: #0284c7; color: white; padding: 15px; text-align: center; }
-    nav { background: #0369a1; padding: 10px; text-align: center; }
-    nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
-    nav a:hover { text-decoration: underline; }
-    .banner { background: url('https://upload.wikimedia.org/wikipedia/commons/7/74/Ben_Ninh_Kieu_Can_Tho.jpg') no-repeat center/cover;
-              color: white; text-align: center; padding: 100px 20px; }
-    .banner h1 { font-size: 50px; text-shadow: 2px 2px 5px black; }
-    .container { padding: 20px; }
-    .card { border: 1px solid #ddd; border-radius: 10px; padding: 15px; margin: 15px 0;
-            display: flex; align-items: center; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-    .card img { width: 200px; border-radius: 10px; margin-right: 20px; }
-    .card h3 { margin: 0; }
-    footer { background: #0369a1; color: white; text-align: center; padding: 15px; margin-top: 20px; }
-    .btn { display: inline-block; padding: 8px 12px; background: #0284c7; color: white;
-           text-decoration: none; border-radius: 5px; margin-top: 10px; }
-    .btn:hover { background: #0369a1; }
-    .details { display: none; margin-top: 10px; }
+    /* ---- CSS ở đây ---- */
+    :root {
+      --primary: #3B82F6;
+      --bg: #f9fafb;
+      --text: #111827;
+    }
+    body {margin:0;font-family:'Inter',sans-serif;background:var(--bg);color:var(--text);}
+    .navbar{display:flex;justify-content:space-between;align-items:center;padding:12px 20px;background:#fff;border-bottom:1px solid #e5e7eb;}
+    .logo{display:flex;align-items:center;font-weight:600;gap:8px;}
+    .flag{width:24px;height:24px;}
+    .navbar nav a{margin:0 12px;text-decoration:none;color:var(--text);font-weight:500;}
+    .actions{display:flex;align-items:center;gap:10px;}
+    .btn{border:none;padding:8px 16px;border-radius:6px;cursor:pointer;font-weight:600;}
+    .btn.primary{background:var(--primary);color:#fff;}
+    .btn.secondary{background:#e0f2fe;color:var(--text);}
+    .icon-btn{background:none;border:none;font-size:18px;cursor:pointer;}
+    .search{display:flex;justify-content:center;padding:20px;gap:10px;flex-wrap:wrap;}
+    .search input{padding:10px;border-radius:6px;border:1px solid #d1d5db;min-width:260px;}
+    .places{padding:20px;}
+    .places h2{text-align:center;margin-bottom:20px;}
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:20px;}
+    .card{background:#fff;border-radius:10px;overflow:hidden;text-align:center;box-shadow:0 2px 6px rgba(0,0,0,0.1);}
+    .card img{width:100%;height:150px;object-fit:cover;}
+    .card p{margin:12px 0;font-weight:600;}
+    .suggest{padding:20px;background:#fff;margin:20px;border-radius:10px;}
+    .suggest-content{display:flex;flex-direction:column;gap:16px;}
+    .suggest-item img{width:100%;border-radius:8px;height:180px;object-fit:cover;}
+    @media (min-width:768px){
+      .suggest-content{flex-direction:row;justify-content:space-between;}
+      .suggest-item{flex:1;}
+    }
   </style>
 </head>
 <body>
 
-  <header>
-    <h2>Du lịch Cần Thơ - Tây Đô Miền Sông Nước</h2>
+  <!-- ---- HEADER ---- -->
+  <header class="navbar">
+    <div class="logo">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Flag_of_Vietnam.svg" alt="VN Flag" class="flag" />
+      <span>Hello-Vietnam</span>
+    </div>
+    <nav>
+      <a href="#">Khám phá</a>
+      <a href="#">Cẩm nang</a>
+      <a href="#">Diễn đàn</a>
+    </nav>
+    <div class="actions">
+      <button class="btn primary">Tải App</button>
+      <button class="icon-btn">🔍</button>
+    </div>
   </header>
 
-  <nav>
-    <a href="#">Trang chủ</a>
-    <a href="#diem-den">Điểm đến</a>
-    <a href="#am-thuc">Ẩm thực</a>
-    <a href="#lien-he">Liên hệ</a>
-  </nav>
+  <!-- ---- SEARCH ---- -->
+  <section class="search">
+    <input type="text" placeholder="Tìm kiếm địa điểm du lịch, ẩm thực" />
+    <button class="btn primary">Tìm kiếm</button>
+  </section>
 
-  <div class="banner">
-    <h1>Khám phá Cần Thơ</h1>
-    <p>Vùng đất gắn liền với sông nước, chợ nổi và con người hiền hòa.</p>
-  </div>
-
-  <div class="container" id="diem-den">
-    <h2>Điểm đến nổi bật</h2>
-
-    <!-- Bến Ninh Kiều -->
-    <div class="card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/7/74/Ben_Ninh_Kieu_Can_Tho.jpg" alt="Bến Ninh Kiều">
-      <div>
-        <h3>Bến Ninh Kiều</h3>
-        <p>Biểu tượng của Cần Thơ, nơi gắn liền với sông Hậu hiền hòa.</p>
-        <a href="javascript:void(0)" class="btn" onclick="toggleDetails('ninhkieu')">Xem chi tiết</a>
-        <div id="ninhkieu" class="details">
-          <p><b>Lịch sử:</b> Hình thành từ thế kỷ 19, là bến sông quan trọng của thành phố.</p>
-          <p><b>Điểm đặc biệt:</b> Công viên rộng, cảnh đẹp về đêm, du thuyền trên sông Hậu.</p>
-        </div>
+  <!-- ---- POPULAR PLACES ---- -->
+  <section class="places">
+    <h2>Địa điểm phổ biến</h2>
+    <div class="grid">
+      <div class="card">
+        <img src="https://i.ibb.co/j3z9gKq/ha-long.jpg" alt="Vịnh Hạ Long">
+        <p>Vịnh Hạ Long</p>
+      </div>
+      <div class="card">
+        <img src="https://i.ibb.co/zbncvgD/hoi-an.jpg" alt="Hội An">
+        <p>Hội An</p>
+      </div>
+      <div class="card">
+        <img src="https://i.ibb.co/6vNkn03/can-tho.jpg" alt="Cần Thơ">
+        <p>Cần Thơ</p>
       </div>
     </div>
+  </section>
 
-    <!-- Chợ nổi Cái Răng -->
-    <div class="card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/1/15/Cai_Rang_Floating_Market_-_Can_Tho_2019.jpg" alt="Chợ nổi Cái Răng">
-      <div>
-        <h3>Chợ nổi Cái Răng</h3>
-        <p>Khu chợ độc đáo trên sông, nhộn nhịp từ sáng sớm.</p>
-        <a href="javascript:void(0)" class="btn" onclick="toggleDetails('cairang')">Xem chi tiết</a>
-        <div id="cairang" class="details">
-          <p><b>Lịch sử:</b> Xuất hiện từ hơn 100 năm trước, là trung tâm buôn bán nông sản.</p>
-          <p><b>Điểm đặc biệt:</b> Buôn bán trên ghe, cảnh sông nước tấp nập, trải nghiệm ẩm thực đặc sản.</p>
-        </div>
+  <!-- ---- SMART SUGGEST ---- -->
+  <section class="suggest">
+    <h3>Gợi ý thông minh</h3>
+    <div class="suggest-content">
+      <div class="suggest-item">
+        <img src="https://i.ibb.co/zbncvgD/hoi-an.jpg" alt="Nhà cổ Bình Thủy">
+        <p>Khám phá Nhà Cổ Bình Thủy – Cần Thơ</p>
+      </div>
+      <div class="suggest-item" style="display:flex;align-items:center;justify-content:center;">
+        <button class="btn secondary">Nhà Cổ Bình Thủy VR</button>
+      </div>
+      <div class="suggest-item">
+        <p>Hỏi đáp AI: Gợi ý món ăn truyền thống Cần Thơ</p>
       </div>
     </div>
-
-    <!-- Nhà cổ Bình Thủy -->
-    <div class="card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Nha_co_Binh_Thuy.jpg" alt="Nhà cổ Bình Thủy">
-      <div>
-        <h3>Nhà cổ Bình Thủy</h3>
-        <p>Ngôi nhà mang kiến trúc Đông - Tây giao hòa, gần 150 năm tuổi.</p>
-        <a href="javascript:void(0)" class="btn" onclick="toggleDetails('binhthuy')">Xem chi tiết</a>
-        <div id="binhthuy" class="details">
-          <p><b>Lịch sử:</b> Xây dựng năm 1870, thuộc dòng họ Dương.</p>
-          <p><b>Điểm đặc biệt:</b> Kiến trúc Pháp cổ kết hợp truyền thống Việt, nhiều phim từng quay tại đây.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <footer id="lien-he">
-    <p>&copy; 2025 Du lịch Cần Thơ | Liên hệ: dulichcantho@gmail.com</p>
-  </footer>
-
-  <script>
-    function toggleDetails(id) {
-      var details = document.getElementById(id);
-      if (details.style.display === "block") {
-        details.style.display = "none";
-      } else {
-        details.style.display = "block";
-      }
-    }
-  </script>
+  </section>
 
 </body>
 </html>
