--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
         <p>Hội An</p>
       </div>
       <div class="card">
-        <img src="https://i.ibb.co/B5S8VPfQ/tat-tan-tat-kinh-nghiem-di-can-tho-ban-can-nho-truoc-khi-di-1650366577.jpg" alt="Cần Thơ">
-        <p>Cần Thơ</p>
+        <img src="https://i.ibb.co/B5S8VPfQ/tat-tan-tat-kinh-nghiem-di-can-tho-ban-can-nho-truoc-khi-di-1650366577.jpg" alt="Ninh Kiều">
+        <p>Ninh Kiều</p>
       </div>
     </div>
   </section>
